[package]
name = "rust-git-hooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindgen = "0.68.1"
dotenv = "0.15.0"
env = "0.0.0"
git2 = "0.18.1"
hyper = { version = "0.14.27", features = ["full"] }
hyper-tls = "0.5.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }